# github-kit

./: README.md  pyproject.toml
kits/clone/: __main__.py  config.py  core.py  utils.py
kits/common/: consts.py  parser.py  test_parser.py  types.py
kits/download/: __main__.py  config.py  consts.py  parser.py  test_core.py  test_parser.py
kits/download/core/: core.py  download.py  mirrors.py  stream.py
